man-db (2.5.7-5) UNRELEASED; urgency=low

  * Use CFLAGS and LDFLAGS from hardening-includes, since man and mandb are
    optionally setuid man.
  * Update French translation from Translation Project (thanks, David
    Prévot; closes: #598621).

 -- Colin Watson <cjwatson@debian.org>  Tue, 07 Sep 2010 10:47:01 +0100

man-db (2.5.7-4) unstable; urgency=low

  * Backport from trunk:
    - Fix a regression introduced in 2.5.7 when running catman in some
      locales, most notably in the C locale: while converting the output to
      UTF-8, iconv was run after the compressor rather than before it
      (closes: #593350, LP: #615045).

 -- Colin Watson <cjwatson@debian.org>  Tue, 17 Aug 2010 14:54:04 +0100

man-db (2.5.7-3) unstable; urgency=low

  * Remove unused build-dependency on gettext.
  * Check for VxID as well as envID in /proc/self/status (closes: #579551).

 -- Colin Watson <cjwatson@debian.org>  Wed, 28 Apr 2010 18:06:49 +0100

man-db (2.5.7-2) unstable; urgency=low

  * Add a watch file.
  * Backport from trunk:
    - Fix assertion failure on 'man -l' with an uncompressed page and
      prefixed input (no-hyphenation, no-justification, or a non-English
      page).

 -- Colin Watson <cjwatson@debian.org>  Tue, 02 Mar 2010 10:19:25 +0000

man-db (2.5.7-1) unstable; urgency=low

  * New upstream release:
    - Make man(1) refer to the "Warnings" node in 'info groff' for a list of
      available warning names (closes: #545805).
    - Don't run tests if cross-compiling.
    - Add option to disable justification (closes: #440047).
    - Do what the user probably means when the full path to an executable is
      given as an argument (closes: #505465).
    - Search man<sec><ext> directories in the GNU layout (closes: #519807).
    - Prefer getting a page from the best manual section over getting a page
      in the correct language; I have my reservations about this, but it
      seems to be what people are requesting (closes: #519547).