@@ -4,6 +4,8 @@ man-db (2.5.7-5) UNRELEASED; urgency=low
     optionally setuid man.
   * Update French translation from Translation Project (thanks, David
     Prévot; closes: #598621).
+  * Make sure that man/po4a/po/* are kept unchanged during a
+    patch/build/clean cycle.  (This will be unnecessary as of man-db 2.5.8.)
 
  -- Colin Watson <cjwatson@debian.org>  Tue, 07 Sep 2010 10:47:01 +0100
 
